<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GalleryActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:numColumns="3"
        android:id="@+id/recycler_view_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/linearlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view_gallery">

        <EditText
            android:id="@+id/textinput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:autofillHints="Enter a name here"
            android:hint="@string/imageName"
            android:inputType="text" />

        <Button
            android:id="@+id/addbutton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#F9AA33"
            android:text="@string/addButton" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#F9AA33"
            android:text="@string/confirm"
            android:visibility="gone"/>

        <Button
            android:id="@+id/sortalphabeticalbutton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#344955"
            android:text="@string/sortAlphabeticalButtonText" />

        <Button
            android:id="@+id/sortunalphabeticalbutton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#344955"
            android:text="@string/sortUnalphabeticalButtonText" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
