...
            android:layout_height="wrap_content"
            android:backgroundTint="#F9AA33"
            android:text="@string/gallery"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/quiz_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#F9AA33"
            android:text="@string/quiz"
            android:layout_marginTop="16dp" />

...
